<resources>
    <string name="app_name">OrdersDeliveryTest</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="log_back_into_your_account">Log back into your account</string>
    <string name="user_id">User Id</string>
    <string name="password">Password</string>
    <string name="show_more">Show more</string>
    <string name="log_in">Log in</string>
    <string name="new_">New</string>
    <string name="new_static">NEW</string>
    <string name="others_static">OTHERS</string>
    <string name="others">Others</string>
    <string name="filter">Filter</string>
    <string name="status">status</string>
    <string name="order_details">Order\nDetails\n></string>
    <string name="total_price">Total price</string>
    <string name="date">Date</string>
    <string name="or">Or</string>
    <string name="try_demo">Try demo</string>
</resources>