<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        tools:context=".ui.login.LoginActivity">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:cardBackgroundColor="@color/red"
            app:cardPreventCornerOverlap="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:shapeAppearanceOverlay="@style/RoundedLeftCorner">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/ic_language" />

        </com.google.android.material.card.MaterialCardView>

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:src="@drawable/onx_logo"
            app:layout_constraintStart_toEndOf="@id/startGuideline"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvWelcome"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/welcome_back"
            android:textAlignment="center"
            android:textColor="@color/blue_dark"
            android:textSize="28sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/tvLoginBack"
            app:layout_constraintEnd_toStartOf="@id/endGuideline"
            app:layout_constraintStart_toEndOf="@id/startGuideline"
            app:layout_constraintTop_toBottomOf="@+id/imageView2"
            app:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:id="@+id/tvLoginBack"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/log_back_into_your_account"
            android:textAlignment="center"
            android:textColor="@color/blue_dark"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@id/inputLayoutUserName"
            app:layout_constraintEnd_toStartOf="@id/endGuideline"
            app:layout_constraintStart_toEndOf="@id/startGuideline"
            app:layout_constraintTop_toBottomOf="@id/tvWelcome" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputLayoutUserName"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Corner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:boxCornerRadiusBottomEnd="16dp"
            app:boxStrokeWidth="0dp"
            app:hintEnabled="false"
            app:layout_constraintBottom_toTopOf="@id/inputLayoutPassword"
            app:layout_constraintEnd_toStartOf="@id/endGuideline"
            app:layout_constraintStart_toEndOf="@id/startGuideline"
            app:layout_constraintTop_toBottomOf="@+id/tvLoginBack">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputUserName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:hint="@string/user_id"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:maxLines="1"
                android:textColorHint="@color/black_light" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputLayoutPassword"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Corner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/password"
            app:boxStrokeWidth="0dp"
            app:hintEnabled="false"
            app:layout_constraintBottom_toTopOf="@id/btnShowMore"
            app:layout_constraintEnd_toStartOf="@id/endGuideline"
            app:layout_constraintStart_toEndOf="@id/startGuideline"
            app:layout_constraintTop_toBottomOf="@+id/inputLayoutUserName">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:hint="@string/password"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:maxLines="1"
                android:textColorHint="@color/black_light" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnShowMore"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/show_more"
            android:textAllCaps="false"
            android:textColor="@color/blue_dark"
            app:layout_constraintBottom_toTopOf="@id/btnLogin"
            app:layout_constraintEnd_toStartOf="@+id/endGuideline"
            app:layout_constraintTop_toBottomOf="@+id/inputLayoutPassword" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnLogin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:enabled="false"
            android:padding="12dp"
            android:text="@string/log_in"
            android:textAllCaps="false"
            android:textSize="16sp"
            app:cornerRadius="24dp"
            app:layout_constraintBottom_toTopOf="@id/tvOr"
            app:layout_constraintEnd_toStartOf="@id/endGuideline"
            app:layout_constraintStart_toEndOf="@id/startGuideline"
            app:layout_constraintTop_toBottomOf="@+id/btnShowMore" />

        <TextView
            android:id="@+id/tvOr"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/or"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/blue_dark"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@id/btnTryDemo"
            app:layout_constraintEnd_toStartOf="@id/endGuideline"
            app:layout_constraintStart_toEndOf="@id/startGuideline"
            app:layout_constraintTop_toBottomOf="@id/btnLogin" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnTryDemo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:text="@string/try_demo"
            android:textAllCaps="false"
            android:textColor="@color/blue_dark"
            android:textSize="16sp"
            app:backgroundTint="@color/white"
            app:cornerRadius="24dp"
            app:layout_constraintBottom_toTopOf="@id/imgDelivery"
            app:layout_constraintEnd_toStartOf="@id/endGuideline"
            app:layout_constraintStart_toEndOf="@id/startGuideline"
            app:layout_constraintTop_toBottomOf="@+id/tvOr"
            app:strokeColor="@color/blue_dark"
            app:strokeWidth="1dp" />


        <ImageView
            android:id="@+id/imgDelivery"
            android:layout_width="wrap_content"
            android:layout_height="125dp"
            android:layout_marginVertical="18dp"
            android:src="@drawable/ic_delivery"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/startGuideline" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/startGuideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="20dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/endGuideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="20dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>