<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="12dp"
    android:layout_marginVertical="8dp"
    app:cardCornerRadius="12dp"
    app:cardElevation="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="#15699999" />

        <TextView
            android:id="@+id/tvStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/status"
            app:layout_constraintEnd_toEndOf="@+id/tvStatusValue"
            app:layout_constraintStart_toStartOf="@+id/tvStatusValue"
            app:layout_constraintTop_toBottomOf="@+id/tvId" />

        <TextView
            android:id="@+id/tvStatusValue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="4dp"
            android:layout_marginBottom="24dp"
            android:textAlignment="center"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/divider1"
            app:layout_constraintStart_toStartOf="@+id/tvId"
            app:layout_constraintTop_toBottomOf="@+id/tvStatus"
            app:layout_constraintVertical_bias="0.0"
            tools:text="Delivering"
            tools:textColor="@color/blue_dark" />

        <View
            android:id="@+id/divider1"
            android:layout_width="1dp"
            android:layout_height="0dp"
            android:background="@android:color/darker_gray"
            app:layout_constraintBottom_toBottomOf="@+id/tvStatusValue"
            app:layout_constraintEnd_toStartOf="@id/tvPriceValue"
            app:layout_constraintStart_toEndOf="@id/tvStatusValue"
            app:layout_constraintTop_toTopOf="@+id/tvStatus" />

        <TextView
            android:id="@+id/tvPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_price"
            app:layout_constraintEnd_toStartOf="@id/tvPriceValue"
            app:layout_constraintStart_toEndOf="@id/tvPriceValue"
            app:layout_constraintTop_toTopOf="@+id/tvStatus" />

        <TextView
            android:id="@+id/tvPriceValue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:textAlignment="center"
            android:textColor="@color/blue_dark"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/divider2"
            app:layout_constraintStart_toEndOf="@id/divider1"
            app:layout_constraintTop_toBottomOf="@+id/tvPrice"
            app:layout_constraintVertical_bias="0.0"
            tools:text="6378 LE" />

        <View
            android:id="@+id/divider2"
            android:layout_width="1dp"
            android:layout_height="0dp"
            android:background="@android:color/darker_gray"
            app:layout_constraintBottom_toBottomOf="@+id/divider1"
            app:layout_constraintEnd_toStartOf="@id/tvDateValue"
            app:layout_constraintStart_toEndOf="@+id/tvPriceValue"
            app:layout_constraintTop_toTopOf="@+id/divider1" />

        <TextView
            android:id="@+id/tvDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date"
            app:layout_constraintEnd_toStartOf="@+id/tvOrderDetails"
            app:layout_constraintStart_toEndOf="@+id/divider2"
            app:layout_constraintTop_toTopOf="@+id/tvPrice" />

        <TextView
            android:id="@+id/tvDateValue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:textAlignment="center"
            android:textColor="@color/blue_dark"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/tvOrderDetails"
            app:layout_constraintStart_toEndOf="@+id/divider2"
            app:layout_constraintTop_toBottomOf="@+id/tvPrice"
            app:layout_constraintVertical_bias="0.0"
            tools:text="11/6/2020" />

        <TextView
            android:id="@+id/tvOrderDetails"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:background="@color/blue_dark"
            android:gravity="center"
            android:paddingHorizontal="8dp"
            android:text="@string/order_details"
            android:textColor="@color/white"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>